--- a/src/main/resources/tester.fxml
+++ b/src/main/resources/tester.fxml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="671.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EventsController">
+<AnchorPane prefHeight="671.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom, #6a0dad, #b19cd9);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EventsMainController">
     <children>
         <!-- Barre latérale -->
-        <VBox layoutX="0.0" layoutY="0.0" prefWidth="200.0" prefHeight="671.0" style="-fx-background-color: #2C3E50;">
+        <VBox layoutX="0.0" layoutY="0.0" prefHeight="671.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to bottom, #4b0082, #8a2be2);">
             <children>
-                <Label text="Gestion Événements" textFill="white" style="-fx-font-size: 18px; -fx-padding: 10px;" />
-                <Button text="Accueil" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Ajouter" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Statistiques" style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Label style="-fx-font-size: 18px; -fx-padding: 10px;" text="Gestion Événements" textFill="white" />
+                <Button onAction="#goToEventList" style="-fx-background-color: transparent; -fx-text-fill: white;" text="Liste des événements" />
+                <Button onAction="#goToAjoutEvent" style="-fx-background-color: transparent; -fx-text-fill: white;" text="Ajouter Évènement" />
             </children>
         </VBox>
 
         <!-- Contenu principal -->
         <VBox layoutX="220.0" layoutY="20.0" prefWidth="700.0">
             <children>
-                <Label text="Liste des Événements" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
+                <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Liste des Événements" />
                 <HBox spacing="10">
-                    <TextField fx:id="searchField" promptText="Rechercher un événement..." prefWidth="400.0" />
-                    <Button text="Rechercher"  />
+                    <TextField prefWidth="400.0" promptText="Rechercher un événement..." />
+                    <Button text="Rechercher" />
+                    <Button fx:id="deleteBouton" layoutX="643.0" layoutY="109.0" mnemonicParsing="false" onAction="#delete" text="Supprimer" />
                 </HBox>
 
                 <!-- Zone d'affichage des événements -->
                 <ListView fx:id="eventListView" prefHeight="500.0" />
-                <Button text="Afficher Événements" onAction="#displayEvents" />
+                <Button onAction="#displayEvents" text="Afficher Événements" />
             </children>
         </VBox>
     </children>
