--- a/src/main/resources/GestionOrganisateur.fxml
+++ b/src/main/resources/GestionOrganisateur.fxml
@@ -96,14 +96,15 @@
                 </GridPane>
 
                 <!-- ✅ Bouton Ajouter -->
-                <Button fx:id="ajouterButton" text="✔ Ajouter l'Organisateur"
+                <Button fx:id="btnAjouterOrganisateur" text="✔ Ajouter l'Organisateur"
                         style="-fx-background-color: #9b59b6;
-                               -fx-text-fill: white;
-                               -fx-font-size: 16px;
-                               -fx-font-weight: bold;
-                               -fx-border-radius: 12px;
-                               -fx-padding: 10px;
-                               -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 12, 0, 2, 2);"/>
+               -fx-text-fill: white;
+               -fx-font-size: 16px;
+               -fx-font-weight: bold;
+               -fx-border-radius: 12px;
+               -fx-padding: 10px;
+               -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 12, 0, 2, 2);"/>
+
             </children>
         </VBox>
     </children>
