--- a/src/main/resources/DetailEspace.fxml
+++ b/src/main/resources/DetailEspace.fxml
@@ -18,7 +18,8 @@
               style="-fx-background-color: rgba(255, 255, 255, 0.3);
                      -fx-padding: 20px;
                      -fx-border-radius: 10px;">
-            <Label fx:id="espaceDetailsLabel" text="Chargement..." style="-fx-font-size: 16px; -fx-text-fill: white;"/>
+            <Label fx:id="espaceDetailsLabel" text="Chargement..."
+                   style="-fx-font-size: 16px; -fx-text-fill: white;"/>
         </VBox>
 
         <Label text="Organisateurs :" layoutX="50.0" layoutY="200.0"
@@ -41,7 +42,5 @@
                 onAction="#ajouterOrganisateur"
                 style="-fx-background-color: #27ae60; -fx-text-fill: white; -fx-font-size: 14px;
                -fx-font-weight: bold; -fx-border-radius: 10px; -fx-padding: 10px;"/>
-
-
     </children>
 </AnchorPane>
