cv avec prbleme de recuperation de l'id de l'espace avec tel=0

--- a/src/main/resources/DetailEspace.fxml
+++ b/src/main/resources/DetailEspace.fxml
@@ -27,10 +27,11 @@
 
         <ScrollPane layoutX="50.0" layoutY="230.0" prefHeight="180.0" prefWidth="550.0">
             <content>
-                <VBox fx:id="organisateurContainer" spacing="10.0"
-                      style="-fx-padding: 10px; -fx-background-color: white; -fx-border-radius: 10px;"/>
+                <VBox fx:id="organisateurContainer" spacing="15.0"
+                      style="-fx-padding: 15px; -fx-background-color: transparent;"/>
             </content>
         </ScrollPane>
+
 
         <!-- 🔙 Bouton Retour -->
         <Button fx:id="retourButton" layoutX="50.0" layoutY="430.0" text="⬅ Retour"
