--- a/src/main/resources/Principalefournisseur.fxml
+++ b/src/main/resources/Principalefournisseur.fxml
@@ -18,7 +18,9 @@
             <children>
                 <Label style="-fx-font-size: 18px; -fx-padding: 10px;" text="Gestion Fournisseurs" textFill="white" />
                 <Button style="-fx-background-color: transparent; -fx-text-fill: white;" text="Liste des fournisseurs" />
-                <Button style="-fx-background-color: transparent; -fx-text-fill: white;" text="Ajouter Fournisseur" />
+                <Button style="-fx-background-color: transparent; -fx-text-fill: white;"
+                        text="Ajouter Fournisseur"
+                        onAction="#goToGestionFournisseur"/>
             </children>
         </VBox>
 
