navigation entre l'ajout et l'affichage de fournisseur avec supp

--- a/src/main/resources/Principalefournisseur.fxml
+++ b/src/main/resources/Principalefournisseur.fxml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.collections.FXCollections?>
 
-<AnchorPane prefHeight="671.0" prefWidth="950.0" style="-fx-background-color: linear-gradient(to bottom, #6a0dad, #b19cd9);"
-            xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.FournisseurMainController">
+<AnchorPane
+        fx:id="root"
+        xmlns="http://javafx.com/javafx"
+        xmlns:fx="http://javafx.com/fxml"
+        fx:controller="controller.FournisseurMainController"
+        prefHeight="670.0" prefWidth="950.0"
+        style="-fx-background-color: linear-gradient(to bottom, #283593, #5c6bc0);">
+
     <children>
-        <!-- Barre latérale -->
-        <VBox layoutX="0.0" layoutY="0.0" prefHeight="671.0" prefWidth="200.0"
-              style="-fx-background-color: linear-gradient(to bottom, #4b0082, #8a2be2);">
+        <VBox layoutX="0.0" layoutY="0.0" prefHeight="670.0" prefWidth="200.0"
+              style="-fx-background-color: linear-gradient(to bottom, #1a237e, #3949ab); -fx-padding: 15px;">
             <children>
-                <Label style="-fx-font-size: 18px; -fx-padding: 10px;" text="Gestion Fournisseurs" textFill="white" />
-                <Button style="-fx-background-color: transparent; -fx-text-fill: white;" text="Liste des fournisseurs" />
-                <Button style="-fx-background-color: transparent; -fx-text-fill: white;"
-                        text="Ajouter Fournisseur"
-                        onAction="#goToGestionFournisseur"/>
+                <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@logo.png" />
+                    </image>
+                </ImageView>
+                <Label text="Gestion des Fournisseurs"
+                       style="-fx-font-size: 20px; -fx-text-fill: white; -fx-font-weight: bold;"/>
+                <Button text="🏠 Accueil" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"/>
+                <Button text="➕ Ajouter Fournisseur" onAction="#goToGestionFournisseur" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"/>
+                <Button text="📋 Liste des Fournisseurs"
+                        style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"
+                        onAction="#displayFournisseurs"/>
             </children>
         </VBox>
 
-        <!-- Contenu principal -->
         <VBox layoutX="220.0" layoutY="20.0" prefWidth="700.0">
             <children>
-                <Label style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Liste des Fournisseurs" />
-                <HBox spacing="10">
-                    <TextField  prefWidth="400.0" promptText="Rechercher un fournisseur..." />
-                    <Button text="Rechercher"  />
-                </HBox>
+                <Label text="📋 Liste des Fournisseurs"
+                       style="-fx-font-size: 26px; -fx-text-fill: white; -fx-font-weight: bold;"/>
 
-                <!-- Zone d'affichage des fournisseurs sous forme de cartes -->
-                <FlowPane fx:id="fournisseurCardContainer" prefHeight="500.0" prefWidth="700.0" hgap="15" vgap="15" />
+                <FlowPane fx:id="fournisseurCardContainer" prefHeight="500.0" prefWidth="700.0" hgap="15" vgap="15"/>
             </children>
         </VBox>
-
-        <!-- Boutons d'action -->
-        <Button layoutX="220.0" layoutY="595.0" onAction="#displayFournisseurs" text="Afficher Fournisseurs" />
-        <Button fx:id="deleteBouton" layoutX="827.0" layoutY="595.0"  text="Supprimer" />
-        <Button fx:id="modifierBouton" layoutX="735.0" layoutY="595.0"  text="Modifier" />
     </children>
 </AnchorPane>
