--- a/src/main/resources/AfficherRemise.fxml
+++ b/src/main/resources/AfficherRemise.fxml
@@ -17,10 +17,10 @@
                 <Label style="-fx-font-size: 20px; -fx-text-fill: white; -fx-font-weight: bold;-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 4, 0, 0, 2);" text="Gestion Remises" />
                 <Button text="🏠 Accueil"
                         style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;
-                               -fx-padding: 10px; -fx-border-radius: 8px;"/>
+                               -fx-padding: 10px; -fx-border-radius: 8px;" onAction="#goToAcceuil"/>
+                <Button  style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;                                -fx-padding: 10px; -fx-border-radius: 8px;" text="➕ Ajouter Remise" onAction="#goToAjout"/>
                 <Button style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;-fx-padding: 10px; -fx-border-radius: 8px;" text="📋 Liste des remises" />
-                <Button  style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;                                -fx-padding: 10px; -fx-border-radius: 8px;" text="➕ Ajouter Remise" />
-            </children>
+                </children>
         </VBox>
 
         <!-- 📌 Contenu principal -->
