--- a/src/main/resources/AfficheReservation.fxml
+++ b/src/main/resources/AfficheReservation.fxml
@@ -16,10 +16,10 @@
                 <Label style="-fx-font-size: 20px; -fx-text-fill: white; -fx-font-weight: bold;-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 4, 0, 0, 2);" text="Gestion Réservations" />
                 <Button text="🏠 Accueil"
                         style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;
-                               -fx-padding: 10px; -fx-border-radius: 8px;"/>
-                <Button style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;-fx-padding: 10px; -fx-border-radius: 8px;" text="📋 Liste des réservations" />
+                               -fx-padding: 10px; -fx-border-radius: 8px;" onAction="#goToAcceuil"/>
                 <Button onAction="#goToAjoutReservation" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;                                -fx-padding: 10px; -fx-border-radius: 8px;" text="➕ Ajouter Réservation" />
-            </children>
+                <Button style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;-fx-padding: 10px; -fx-border-radius: 8px;" text="📋 Liste des réservations" />
+                </children>
         </VBox>
 
         <!-- 📌 Contenu principal -->
